err/twtpycurl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/curl'...
Listing './lib/python3.5/site-packages/oauthlib'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1/rfc5849'...
Listing './lib/python3.5/site-packages/oauthlib/oauth1/rfc5849/endpoints'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/clients'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/endpoints'...
Listing './lib/python3.5/site-packages/oauthlib/oauth2/rfc6749/grant_types'...
Listing './lib/python3.5/site-packages/oauthlib-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycurl-7.43.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/twtPyCurl'...
Listing './lib/python3.5/site-packages/twtPyCurl/py'...
Compiling './lib/python3.5/site-packages/twtPyCurl/py/utilities.py'...
***   File "./lib/python3.5/site-packages/twtPyCurl/py/utilities.py", line 144
    print "attr", curAttr
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twtPyCurl/tests'...
Compiling './lib/python3.5/site-packages/twtPyCurl/tests/manual.py'...
***   File "./lib/python3.5/site-packages/twtPyCurl/tests/manual.py", line 23
    print jdata.get('text')
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twtPyCurl/twt'...
Compiling './lib/python3.5/site-packages/twtPyCurl/twt/simulate.py'...
***   File "./lib/python3.5/site-packages/twtPyCurl/twt/simulate.py", line 92
    print cls.format_stats_header
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/twtPyCurl-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/twt_data'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pycurl'...
Listing './share/doc/pycurl/examples'...
Compiling './share/doc/pycurl/examples/basicfirst.py'...
Compiling './share/doc/pycurl/examples/file_upload.py'...
Compiling './share/doc/pycurl/examples/linksys.py'...
Listing './share/doc/pycurl/examples/quickstart'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_buffer.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real_fancy.py'...
Compiling './share/doc/pycurl/examples/quickstart/follow_redirect.py'...
Compiling './share/doc/pycurl/examples/quickstart/form_post.py'...
Compiling './share/doc/pycurl/examples/quickstart/get.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python2.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python3.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_headers.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_info.py'...
Compiling './share/doc/pycurl/examples/quickstart/write_file.py'...
Compiling './share/doc/pycurl/examples/retriever-multi.py'...
Compiling './share/doc/pycurl/examples/retriever.py'...
Compiling './share/doc/pycurl/examples/sfquery.py'...
Compiling './share/doc/pycurl/examples/smtp.py'...
Compiling './share/doc/pycurl/examples/ssh_keyfunction.py'...
Compiling './share/doc/pycurl/examples/xmlrpc_curl.py'...
Listing './share/python-wheels'...
